--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -66,7 +66,9 @@ body {
 }
 
 .bg-image {
-	width: 100%;
+	width: 1210px;
+	height: 50vh;
+	max-width: 1210px;
 	display: block;
 }
 
@@ -88,7 +90,6 @@ h3 {
 header {
 	position: relative;
 	height: 63vh;
-	padding: 0 10%;
 }
 
 header h1 {
@@ -99,22 +100,22 @@ header h1 {
 }
 
 .bg-image {
-	display: block;
 	margin: auto;
 	height: auto;
 }
 
 .nav {
-	margin-bottom: 0%;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 nav ul {
 	text-align: center;
 	text-transform: uppercase;
-	font-size: 30px;
+	font-size: 2vw;
+	padding-bottom: 3vh;
   	justify-content: space-between;
 }
-
 
 nav ul li {
 	padding: 20px 0;
@@ -131,6 +132,8 @@ nav ul li:not(:first-child) {
 	border-left: 1px solid #00000070;
 	padding-left: 50px;
 }
+
+
 
 .cropped {
 	width: 275px;
