--- a/week-12/css/main.css
+++ b/week-12/css/main.css
@@ -314,13 +314,17 @@ footer {
     
     h3 {
         font-size: 1.75rem;
-    }
+    } 
 
     .values-section .value {
         flex-direction: row;
     }
 
     /* ----- Desktop: Gallery Section */
+    .wrapper {
+        display: flex;
+    }
+
     .gallery-section .images {
         grid-template-columns: repeat(3, 1fr);
     }
