--- a/final-project/css/copynpaste.css
+++ b/final-project/css/copynpaste.css
@@ -574,9 +574,19 @@ table {
 		background-color: white;
 	}
 
+	/* - - - - - Header - - - - - */
+
+	.container {
+		display: flex;
+	}
+	
 	.logo-img {
-		width: 30px;
-		max-height: 50px;
+		display: flex;
+		float: left;
+		align-self: flex-start;
+		max-height: 110px;
+		position: relative;
+		margin-top: 30px;
 	}
 
 	header {
@@ -584,58 +594,95 @@ table {
 	}
 
 	/* - - - - - Nav - - - - - */
+
 	nav ul {
-		margin-left: 150px;
+		align-self: baseline;
+		margin-top: 50px;
+		margin-left: 50px;
 		flex-direction: row;
+		list-style: none;
+		width: 90%;
 	}
 
 	nav ul li {
-		padding: 0px;	
+		padding: 0px;
 	}
 
 	.form-search {
-		align-items: end;
-		display: flex;
+		align-items: right;
+		justify-content: flex-end;
+		align-self: baseline;
 	}
 	
 	.form-search input {
 		align-items: end;
 		width: 100%;
 		padding: 7px 10px;
-		margin-left: 100%;
+		margin-left: %;
 	}
 	
 	.form-search button {
 		align-items: end;
+		width: 40px;
 	}
 
 	/* - - - - - Banner - - - - - */
 
-
-	body {
-		background-size: 3vh;
-		width: 100%;
-		height: 300px;
+	header .banner .banner-info {
+		margin-top: 30px;
+		height: 2vh;
+		padding-bottom: 600px;
 	}
 
 	.buble {
-		padding-bottom: 20px;
+		padding-bottom: 50px;
 		margin-left: 90px;
 		margin-right: 90px;
+		position: absolute;
+		margin-top: 50px;
 	}
 
 	h1 {
-		font-size: 3rem;
+		font-size: 6rem;
+		line-height: 15vh;
+		margin-top: 25px;
 	}
 
-	/* - - - - - bam - - - - - */
-	.about-us img {
-		width: 500px;
+	.banner p {
+		margin-top: 20px;
+		line-height: 30px;
+		margin-left: 22px;
 	}
+
+	.connect-btn {
+		font-size: 30px;
+		margin-left: 30px;
+		margin-top: 50px;
+	}
+
+	.connect-btn a {
+		padding: 40px;
+	}
+
+	/* - - - - - About Us - - - - - */
 
 	.about-us {
-		flex-wrap: wrap;
+	background-color: #ffe6ac;
+	padding-top: 20px;
+	}
+
+	.about-us img {
+		margin-left: 100px;
+		width: 500px;
+		margin-left: ;
+	}
+
+	.about-us p {
+		flex-direction: row;
 		align-items: center;
 		justify-content: space-between;
 	}
+
+	/* - - - - - Our Services - - - - - */
+
  }
